syntax = "proto3";

package alkanes;

message uint128 {
  uint64 lo = 1;
  uint64 hi = 2;
}

message AlkaneId {
  uint128 block = 1;
  uint128 tx = 2;
}

message AlkaneTransfer {
  AlkaneId id = 1;
  uint128 value = 2;
}

message MultiSimulateRequest {
    repeated MessageContextParcel parcels = 1;
}

message MessageContextParcel {
  repeated AlkaneTransfer alkanes = 1;
  bytes transaction = 2;
  bytes block = 3;
  uint64 height = 4;
  uint32 txindex = 6;
  bytes calldata = 5;
  uint32 vout = 7;
  uint32 pointer = 8;
  uint32 refund_pointer = 9;
}

message KeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message ExtendedCallResponse {
  repeated AlkaneTransfer alkanes = 1;
  repeated KeyValuePair storage = 2;
  bytes data = 3;
}

message Context {
  AlkaneId myself = 1;
  AlkaneId caller = 2;
  repeated uint128 inputs = 3;
  uint32 vout = 4;
  repeated AlkaneTransfer incoming_alkanes = 5;
}

message TraceContext {
  Context inner = 1;
  uint64 fuel = 2;
}

enum AlkanesTraceCallType {
  NONE = 0;
  CALL = 1;
  DELEGATECALL = 2;
  STATICCALL = 3;
}

enum AlkanesTraceStatusFlag {
  SUCCESS = 0;
  FAILURE = 1;
}

message AlkanesEnterContext {
  AlkanesTraceCallType call_type = 1;
  TraceContext context = 2;
}

message AlkanesExitContext {
  AlkanesTraceStatusFlag status = 1;
  ExtendedCallResponse response = 2;
}

message AlkanesCreate {
  AlkaneId new_alkane = 1;
}

message AlkanesTraceEvent {
  oneof event {
    AlkanesEnterContext enter_context = 1;
    AlkanesExitContext exit_context = 2;
    AlkanesCreate create_alkane = 3;
  }
}

message AlkanesBlockEvent {
    AlkanesTrace traces = 1;
    Outpoint outpoint = 2;
    uint64 txindex = 3;
}

message AlkanesBlockTraceEvent {
    repeated AlkanesBlockEvent events = 1;
}

message AlkanesTrace {
  repeated AlkanesTraceEvent events = 1;
}

message SimulateResponse {
  ExtendedCallResponse execution = 1;
  uint64 gas_used = 2;
  string error = 3;
}

message MultiSimulateResponse {
    repeated SimulateResponse responses = 1;
    string error = 2;
}

message AlkaneInventoryRequest {
  AlkaneId id = 1;
}

message AlkaneIdToOutpointRequest {
  AlkaneId id = 1;
}

message AlkaneInventoryResponse {
  repeated AlkaneTransfer alkanes = 1;
}

message AlkaneStorageRequest {
  AlkaneId id = 1;
  bytes path = 2;
}

message AlkaneStorageResponse {
  bytes value = 1;
}

message AlkaneIdToOutpointResponse {
  bytes txid = 1;
  uint32 vout = 2;
}

message Outpoint {
  bytes txid = 1;
  uint32 vout = 2;
}

message Trace {
  Outpoint outpoint = 1;
  AlkanesTrace trace = 2;
}

message TraceBlockRequest {
  uint64 block = 1;
}

message TraceBlockResponse {
  repeated Trace traces = 1;
}

message BytecodeRequest {
  AlkaneId id = 1;
}

message BlockRequest {
  uint32 height = 1;
}

message BlockResponse {
  bytes block = 1;
  uint32 height = 2;
}

message TransactionRequest {
  bytes txid = 1;
}

message Balances {
  repeated Balance entries = 1;
}

message TransactionResponse {
  bytes transaction = 1;
}

message Payment {
  Outpoint spendable = 1;
  bytes output = 2;
  bool fulfilled = 3;
}

message PendingUnwrapsResponse {
  repeated Payment payments = 1;
}

message Balance {
  uint128 rune_id = 1;
  uint128 amount = 2;
}

message RuneId {
  uint32 height = 1;
  uint32 txindex = 2;
}

message ProtoruneRuneId {
  uint128 height = 1;
  uint128 txindex = 2;
}

message Rune {
  ProtoruneRuneId runeId = 1;
  string name = 2;
  uint32 divisibility = 3;
  uint32 spacers = 4;
  string symbol = 5;
}

message BalanceSheetItem {
  Rune rune = 1;
  uint128 balance = 2;
}

message OutpointWithProtocol {
  bytes txid = 1;
  uint32 vout = 2;
  uint128 protocol = 3;
}
message Output {
  bytes script = 1;
  uint64 value = 2;
}

message OutpointResponse {
  Outpoint outpoint = 2;
  Output output = 3;
  uint32 height = 4;
  uint32 txindex = 5;
  bytes balances = 6;
}

message PaginationInput {
  uint32 start = 1;
  uint32 end = 2;
}

message WalletRequest {
  bytes wallet = 1;
}

message WalletResponse {
  repeated OutpointResponse outpoints = 1;
}

message ProtorunesWalletRequest {
  bytes wallet = 1;
  uint128 protocol_tag = 2;
}

message RunesByHeightRequest {
  uint64 height = 1;
}

message ProtorunesByHeightRequest {
  uint64 height = 1;
  uint128 protocol_tag = 2;
}

message RunesResponse {
  repeated Rune runes = 1;
}
message ProtoBurn {
  uint128 protocol_tag = 1;
  uint32 pointer = 2;
}

message Clause {
  ProtoruneRuneId rune = 1;
  uint128 amount = 2;
}

message Predicate {
  repeated Clause clauses = 1;
}

message ProtoMessage {
  bytes calldata = 1;
  Predicate predicate = 2;
  uint32 pointer = 3;
  uint32 refund_pointer = 4;
}

message RuntimeInput {
  uint128 protocol_tag = 1;
}

message Runtime {
}
